[gd_scene load_steps=11 format=3 uid="uid://17b2f352krkj"]

[ext_resource type="Script" path="res://Data/scripts/enemy.gd" id="1_4s5gh"]
[ext_resource type="Texture2D" uid="uid://dxgxxamr1fss4" path="res://Scenes/entities/mobs/slime/move_sheet.png" id="1_oatqv"]
[ext_resource type="PackedScene" uid="uid://kb7a4xc26bly" path="res://Scenes/utility/hurt_box.tscn" id="3_atge2"]
[ext_resource type="PackedScene" uid="uid://gb777hao5hke" path="res://Scenes/utility/hit_box.tscn" id="4_kc5l1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0rj8m"]
radius = 20.0998

[sub_resource type="Animation" id="Animation_t2boe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_oatqv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_iwlc4"]
resource_name = "walk"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_oatqv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.15, 0.25, 0.35, 0.45, 0.55, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bomx"]
_data = {
"RESET": SubResource("Animation_t2boe"),
"walk": SubResource("Animation_iwlc4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2nah0"]
radius = 35.0571

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7bd73"]
radius = 21.0
height = 96.0

[node name="slime_green" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_4s5gh")
movement_speed = 69.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_oatqv")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 21)
shape = SubResource("CircleShape2D_0rj8m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7bomx")
}
autoplay = "walk"

[node name="hurt_box" parent="." instance=ExtResource("3_atge2")]
collision_mask = 4

[node name="collision" parent="hurt_box" index="0"]
position = Vector2(-5, 14)
shape = SubResource("CircleShape2D_2nah0")

[node name="hit_box" parent="." instance=ExtResource("4_kc5l1")]
collision_layer = 2

[node name="CollisionShape2D" parent="hit_box" index="0"]
position = Vector2(-1, 21)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7bd73")
debug_color = Color(0.768627, 0.658824, 1, 0.419608)

[connection signal="hurt" from="hurt_box" to="." method="_on_hurt_box_hurt"]

[editable path="hurt_box"]
[editable path="hit_box"]
